--- a/coursework/CSS.css
+++ b/coursework/CSS.css
@@ -122,3 +122,25 @@ h1#page_title{
 		border-color: #4F4A41 !important;
 		border-width: 2px;
 }
+
+
+#register .short{
+font-weight:bold;
+color:#FF0000;
+font-size:larger;
+}
+#register .weak{
+font-weight:bold;
+color:orange;
+font-size:larger;
+}
+#register .good{
+font-weight:bold;
+color:#2D98F3;
+font-size:larger;
+}
+#register .strong{
+font-weight:bold;
+color: limegreen;
+font-size:larger;
+}
